@@ -216,6 +216,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ServiceConfigurationError
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|ServiceLoader
 import|;
 end_import
@@ -555,6 +565,20 @@ operator|.
 name|token
 operator|.
 name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|ClassUtil
 import|;
 end_import
 
@@ -7865,13 +7889,40 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-for|for
-control|(
+name|Iterator
+argument_list|<
+name|FileSystem
+argument_list|>
+name|it
+init|=
+name|serviceLoader
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
 name|FileSystem
 name|fs
-range|:
-name|serviceLoader
-control|)
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fs
+operator|=
+name|it
+operator|.
+name|next
+argument_list|()
+expr_stmt|;
+try|try
 block|{
 name|SERVICE_FILE_SYSTEMS
 operator|.
@@ -7888,6 +7939,54 @@ name|getClass
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Cannot load: "
+operator|+
+name|fs
+operator|+
+literal|" from "
+operator|+
+name|ClassUtil
+operator|.
+name|findContainingJar
+argument_list|(
+name|fs
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|ServiceConfigurationError
+name|ee
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Cannot load filesystem"
+argument_list|,
+name|ee
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|FILE_SYSTEMS_LOADED
 operator|=
