@@ -52,6 +52,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ServiceConfigurationError
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|junit
@@ -130,6 +140,67 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testMissingLibraries ()
+specifier|public
+name|void
+name|testMissingLibraries
+parameter_list|()
+block|{
+name|boolean
+name|catched
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|FileSystem
+operator|.
+name|getFileSystemClass
+argument_list|(
+literal|"s3a"
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|catched
+operator|=
+literal|true
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ServiceConfigurationError
+name|e
+parameter_list|)
+block|{
+comment|// S3A shouldn't find AWS SDK and fail
+name|catched
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|catched
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
